--- a/template-page-style.css
+++ b/template-page-style.css
@@ -30,8 +30,7 @@ a:link {
 .open-template-text {
     background-color: #4CAF50;
     padding: 16px 32px;
-    height: 5%;
-    font-size: 20px;
+    height: 5% 20px;
     text-align: center;
     margin: 48% 10% 50% 10%;
     color: #fff;
