--- a/template-page-style.less
+++ b/template-page-style.less
@@ -1,68 +1,203 @@
-﻿@open_button_bg_color: #4CAF50;
+@open_button_bg_color: #4CAF50;
 @open_button_bg_color_dark: #46a049;
 @load_more_bg_color: #f0f0f0;
 @load_more_color: #3a87ad;
 
+@menu_link_color: #999;
+@menu_link_active_color: darken(#b94a48, 20%);
+@menu_bg_color: transparent;
+@menu_border_left_color: #b94a48;
+
+
+
+
+.img-thumbnail {
+    /*height: 50%;*/
+    /*width:@width*60%;
+    height:@width*60%*1.39;*/
+    /*width:60%;*/
+    height: 230px;
+}
+
+.region-caption {
+    border-bottom: solid #b5b5b5 1px;
+    font-size: 100%;
+    font-weight: bold;
+    padding: 0;
+    text-transform: uppercase;
+    color: #959595;
+    line-height: 30px;
+}
+
 .template-item {
-	padding-top: 15px;
-	padding-bottom: 15px;
-	padding-left: 5px;
-	&:hover {
-		.open-template {
-			opacity: 1;
-			background: rgba(0,0,0,0.5);
-			transition: .5s ease;
-		}
-	}
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 5px;
+
+    &:hover {
+        .open-template {
+            opacity: 1;
+            background: rgba(0,0,0,0.5);
+            transition: .5s ease;
+        }
+    }
 }
+
 a {
-	&:link {
-		text-decoration: none;
-	}
+    &:link {
+        text-decoration: none;
+    }
 }
+
 .template-text-info {
-	color: black;
+    color: black;
 }
+
 .open-template {
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: 0;
-	bottom: 0;
-	opacity: 0;
-	&:hover {
-		cursor: pointer;
-	}
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    opacity: 0;
+
+    &:hover {
+        cursor: pointer;
+    }
 }
+
 .open-template-text {
-	background-color: @open_button_bg_color;
-	padding: 16px;
-	height: 15% 1px;
-	text-align: center;
-	margin: 48% 10% 50% 10%;
-	color: white;
-	&:hover {
-		background-color: @open_button_bg_color_dark;
-		transition: .1s ease;
-	}
-	&:active {
-		background-color: @open_button_bg_color_dark;
-		cursor: pointer;
-		box-shadow: inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);
-	}
+    background-color: @open_button_bg_color;
+    padding: 16px;
+    text-align: center;
+    position: absolute;
+    top: 40%;
+    left: 10%;
+    right: 10%;
+    /*margin: 60% 10% 50% 10%;*/
+    color: white;
+
+    &:hover {
+        background-color: @open_button_bg_color_dark;
+        transition: .1s ease;
+    }
+
+    &:active {
+        background-color: @open_button_bg_color_dark;
+        cursor: pointer;
+        box-shadow: inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05);
+    }
 }
+
 .load-more-item {
-	cursor: pointer;
-	display: block;
-	text-align: center;
-	color: @load_more_color;
-	padding: 5px 0;
-	&:hover {
-		background-color: @load_more_bg_color;
-	}
+    cursor: pointer;
+    display: block;
+    text-align: center;
+    color: @load_more_color;
+    padding: 5px 0;
+
+    &:hover {
+        background-color: @load_more_bg_color;
+    }
 }
+
 .equal {
-	display: flex;
-	display: -webkit-flex;
-	flex-wrap: wrap;
+    display: flex;
+    display: -webkit-flex;
+    flex-wrap: wrap;
+}
+
+
+.active_link {
+    color: @menu_link_active_color;
+    text-decoration: none;
+    background-color: @menu_bg_color;
+    border-left-color: @menu_border_left_color;
+}
+
+
+.bs-docs-sidebar {
+    padding-left: 20px;
+    /*margin-top: 20px;
+	margin-bottom: 20px;*/
+    .affix {
+        position: fixed;
+        top: 20px;
+    }
+
+    .nav {
+        > li {
+            > a {
+                color: @menu_link_color;
+                border-left: 2px solid transparent;
+                padding: 4px 20px;
+                font-size: 14px;
+                font-weight: 400;
+
+                &:hover {
+                    .active_link;
+                }
+
+                &:focus {
+                    .active_link;
+                }
+            }
+        }
+
+        .nav {
+            > li {
+                > a {
+                    padding-top: 1px;
+                    padding-bottom: 1px;
+                    padding-left: 30px;
+                    font-size: 13px;
+                }
+            }
+
+            > .active {
+                > a {
+                    font-weight: 500;
+                }
+
+                &:hover {
+                    > a {
+                        font-weight: 500;
+                    }
+                }
+
+                &:focus {
+                    > a {
+                        font-weight: 500;
+                    }
+                }
+            }
+        }
+
+        > .active {
+            > a {
+                .active_link;
+                font-weight: 700;
+            }
+
+            &:hover {
+                > a {
+                    font-weight: 700;
+                }
+            }
+
+            &:focus {
+                > a {
+                    font-weight: 700;
+                }
+            }
+
+            > ul.nav {
+                display: block;
+            }
+        }
+
+        ul.nav {
+            display: none;
+        }
+    }
 }
