--- a/template-page-style.less
+++ b/template-page-style.less
@@ -152,3 +152,20 @@ a {
         }
     }
 }
+
+@media screen and (max-width: 767px) {
+	.sidebar-offcanvas {
+		position: absolute;
+		display: none;
+        margin-top:40px;
+	}
+	.row-offcanvas.active {
+		.sidebar-offcanvas {
+			display: block;
+			right: 2%;
+		}
+	}
+}
+.toggle-menu-btn{
+    right:1%;
+}
