--- a/template-page-style.less
+++ b/template-page-style.less
@@ -154,15 +154,29 @@ a {
 }
 
 @media screen and (max-width: 767px) {
+    .bs-docs-sidebar{
+        background-color:#eee;
+        right:0;
+    }
+	.row-offcanvas {
+		position: relative;
+		-webkit-transition: all .25s ease-out;
+		-o-transition: all .25s ease-out;
+		transition: all .25s ease-out;
+        
+	}
 	.sidebar-offcanvas {
 		position: absolute;
 		display: none;
         margin-top:40px;
+        width:50%;
+        
 	}
 	.row-offcanvas.active {
 		.sidebar-offcanvas {
 			display: block;
-			right: 2%;
+			right: 0;
+			z-index: 1;          
 		}
 	}
 }
